k8s/do/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: net-policy-java-test
  namespace: apps
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: process-images-java-test
      app.kubernetes.io/part-of: tenderizz
  policyTypes:
    - Ingress
  ingress:
    # Разрешить трафик от ЛЮБОГО пода в Namespace 'apps'
    # Это позволяет Ingress Controller'у или LoadBalancer'у достучаться до пода.
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 8080

    # Добавляем разрешение от внешних источников (нужно для LoadBalancer, если CNI требует)
    # Это разрешает трафик от подов, которые не находятся в namespace 'apps'
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 8080
